Try to fix UI broke on mobile 11

--- a/src/app/digits/components/game-arithmetic-operations/game-arithmetic-operations.component.scss
+++ b/src/app/digits/components/game-arithmetic-operations/game-arithmetic-operations.component.scss
@@ -57,6 +57,9 @@
     border-radius: 50%;
     margin: 3px 3px 3px 3px;
     /* text-align: center; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: blue;
   }
   .operator-content-icon {
